--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2024"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yml = "0.0.12"
 thiserror = "2.0.12"
+
+[lints.clippy]
+unwrap_used = "warn"
