--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,9 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_yml = "0.0.12"
 thiserror = "2.0.12"
 
+[lints.rust]
+missing_docs = "warn"
+
 [lints.clippy]
 unwrap_used = "warn"
+pedantic = "warn"
