--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
-serde_yml = "0.0.12"
+serde_yaml = "0.9.34"
 thiserror = "2.0.12"
 
 [lints.rust]
